# agente-autonomo-analise-csv

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-data.sh
data/: Tabela_NCM.csv
modelo/: I2A2.json  prompt.md  prompt_br.md  workflow_agent.json
